--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -1,4 +1,255 @@
 {
     "sign_in_account": "تسجيل الدخول إلى حسابك",
-    "home": "الرئيسية"
+    "home": "الرئيسية",
+    "Nationality": "الجنسية",
+    "countries": {
+        "AD": "أندورا",
+        "AE": "الإمارات العربية المتحدة",
+        "AF": "أفغانستان",
+        "AG": "أنتيغوا وبربودا",
+        "AI": "أنغويلا",
+        "AL": "ألبانيا",
+        "AM": "أرمينيا",
+        "AO": "أنغولا",
+        "AQ": "أنتاركتيكا",
+        "AR": "الأرجنتين",
+        "AS": "ساموا الأمريكية",
+        "AT": "النمسا",
+        "AU": "أستراليا",
+        "AW": "أروبا",
+        "AX": "جزر أولاند",
+        "AZ": "أذربيجان",
+        "BA": "البوسنة والهرسك",
+        "BB": "باربادوس",
+        "BD": "بنغلاديش",
+        "BE": "بلجيكا",
+        "BF": "بوركينا فاسو",
+        "BG": "بلغاريا",
+        "BH": "البحرين",
+        "BI": "بوروندي",
+        "BJ": "بنين",
+        "BL": "سان بارتيلمي",
+        "BM": "برمودا",
+        "BN": "بروناي",
+        "BO": "بوليفيا",
+        "BR": "البرازيل",
+        "BS": "جزر البهاما",
+        "BT": "بوتان",
+        "BV": "جزيرة بوفيه",
+        "BW": "بوتسوانا",
+        "BY": "بيلاروسيا",
+        "BZ": "بليز",
+        "CA": "كندا",
+        "CC": "جزر كوكوس (كيلينغ)",
+        "CD": "الكونغو الديمقراطية",
+        "CF": "جمهورية أفريقيا الوسطى",
+        "CG": "جمهورية الكونغو",
+        "CH": "سويسرا",
+        "CI": "ساحل العاج",
+        "CK": "جزر كوك",
+        "CL": "تشيلي",
+        "CM": "الكاميرون",
+        "CN": "الصين",
+        "CO": "كولومبيا",
+        "CR": "كوستاريكا",
+        "CU": "كوبا",
+        "CV": "الرأس الأخضر",
+        "CW": "كوراساو",
+        "CX": "جزيرة الكريسماس",
+        "CY": "قبرص",
+        "CZ": "التشيك",
+        "DE": "ألمانيا",
+        "DJ": "جيبوتي",
+        "DK": "الدنمارك",
+        "DM": "دومينيكا",
+        "DO": "جمهورية الدومينيكان",
+        "DZ": "الجزائر",
+        "EC": "الإكوادور",
+        "EE": "إستونيا",
+        "EG": "مصر",
+        "EH": "الصحراء الغربية",
+        "ER": "إريتريا",
+        "ES": "إسبانيا",
+        "ET": "إثيوبيا",
+        "FI": "فنلندا",
+        "FJ": "فيجي",
+        "FK": "جزر الفوكلاند",
+        "FM": "ميكرونيزيا",
+        "FO": "جزر فارو",
+        "FR": "فرنسا",
+        "GA": "الغابون",
+        "GB": "المملكة المتحدة",
+        "GD": "غرينادا",
+        "GE": "جورجيا",
+        "GF": "غيانا الفرنسية",
+        "GG": "غيرنسي",
+        "GH": "غانا",
+        "GI": "جبل طارق",
+        "GL": "غرينلاند",
+        "GM": "غامبيا",
+        "GN": "غينيا",
+        "GP": "غوادلوپ",
+        "GQ": "غينيا الاستوائية",
+        "GR": "اليونان",
+        "GS": "جورجيان وأنتاركتيكا الجنوبية",
+        "GT": "غواتيمالا",
+        "GU": "غوام",
+        "GW": "غينيا بيساو",
+        "GY": "غيانا",
+        "HK": "هونغ كونغ",
+        "HM": "جزيرة هيرد وجزر ماكدونالد",
+        "HN": "هندوراس",
+        "HR": "كرواتيا",
+        "HT": "هايتي",
+        "HU": "المجر",
+        "ID": "إندونيسيا",
+        "IE": "إيرلندا",
+        "IL": "إسرائيل",
+        "IM": "جزيرة مان",
+        "IN": "الهند",
+        "IO": "الإقليم البريطاني في المحيط الهندي",
+        "IQ": "العراق",
+        "IR": "إيران",
+        "IS": "أيسلندا",
+        "IT": "إيطاليا",
+        "JE": "جيرسي",
+        "JM": "جامايكا",
+        "JO": "الأردن",
+        "JP": "اليابان",
+        "KE": "كينيا",
+        "KG": "قرغيزستان",
+        "KH": "كمبوديا",
+        "KI": "كيريباتي",
+        "KM": "جزر القمر",
+        "KN": "سانت كيتس ونيفيس",
+        "KP": "كوريا الشمالية",
+        "KR": "كوريا الجنوبية",
+        "KW": "الكويت",
+        "KY": "جزر كايمن",
+        "KZ": "كازاخستان",
+        "LA": "لاوس",
+        "LB": "لبنان",
+        "LC": "سانت لوسيا",
+        "LI": "ليختنشتاين",
+        "LK": "سريلانكا",
+        "LR": "ليبيريا",
+        "LS": "ليسوتو",
+        "LT": "ليتوانيا",
+        "LU": "لوكسمبورغ",
+        "LV": "لاتفيا",
+        "LY": "ليبيا",
+        "MA": "المغرب",
+        "MC": "موناكو",
+        "MD": "مولدوفا",
+        "ME": "الجبل الأسود",
+        "MF": "سان مارتن",
+        "MG": "مدغشقر",
+        "MH": "جزر مارشال",
+        "MK": "مقدونيا",
+        "ML": "مالي",
+        "MM": "ميانمار",
+        "MN": "منغوليا",
+        "MO": "ماكاو",
+        "MP": "جزر مريانا الشمالية",
+        "MQ": "مارتينيك",
+        "MR": "موريتانيا",
+        "MS": "مونتسرات",
+        "MT": "مالطا",
+        "MU": "موريشيوس",
+        "MV": "المالديف",
+        "MW": "ملاوي",
+        "MX": "المكسيك",
+        "MY": "ماليزيا",
+        "MZ": "موزمبيق",
+        "NA": "ناميبيا",
+        "NC": "كاليدونيا الجديدة",
+        "NE": "النيجر",
+        "NF": "جزيرة نورفولك",
+        "NG": "نيجيريا",
+        "NI": "نيكاراغوا",
+        "NL": "هولندا",
+        "NO": "النرويج",
+        "NP": "نيبال",
+        "NR": "ناورو",
+        "NU": "نيوي",
+        "NZ": "نيوزيلندا",
+        "OM": "عمان",
+        "PA": "بنما",
+        "PE": "بيرو",
+        "PF": "بولينيزيا الفرنسية",
+        "PG": "بابوا غينيا الجديدة",
+        "PH": "الفلبين",
+        "PK": "باكستان",
+        "PL": "بولندا",
+        "PM": "سان بيير وميكلون",
+        "PN": "جزر بيتكيرن",
+        "PR": "بورتو ريكو",
+        "PS": "فلسطين",
+        "PT": "البرتغال",
+        "PW": "بالاو",
+        "PY": "باراغواي",
+        "QA": "قطر",
+        "RE": "ريونيون",
+        "RO": "رومانيا",
+        "RS": "صربيا",
+        "RU": "روسيا",
+        "RW": "رواندا",
+        "SA": "السعودية",
+        "SB": "جزر سليمان",
+        "SC": "سيشيل",
+        "SD": "السودان",
+        "SE": "السويد",
+        "SG": "سنغافورة",
+        "SH": "سانت هيلينا",
+        "SI": "سلوفينيا",
+        "SJ": "سفالبارد ويان ماين",
+        "SK": "سلوفاكيا",
+        "SL": "سيراليون",
+        "SM": "سان مارينو",
+        "SN": "السنغال",
+        "SO": "الصومال",
+        "SR": "سورينام",
+        "SS": "جنوب السودان",
+        "ST": "ساو تومي وبرينسيبي",
+        "SV": "السلفادور",
+        "SX": "سينت مارتن",
+        "SY": "سوريا",
+        "SZ": "سوازيلاند",
+        "TC": "جزر الترك وجايكوس",
+        "TD": "تشاد",
+        "TF": "المقاطعات الفرنسية الجنوبية",
+        "TG": "توجو",
+        "TH": "تايلاند",
+        "TJ": "طاجيكستان",
+        "TK": "توكيلاو",
+        "TL": "تيمور الشرقية",
+        "TM": "تركمانستان",
+        "TN": "تونس",
+        "TO": "تونغا",
+        "TR": "تركيا",
+        "TT": "ترينيداد وتوباغو",
+        "TV": "توفالو",
+        "TW": "تايوان",
+        "TZ": "تنزانيا",
+        "UA": "أوكرانيا",
+        "UG": "أوغندا",
+        "US": "الولايات المتحدة",
+        "UY": "أوروغواي",
+        "UZ": "أوزبكستان",
+        "VA": "الفاتيكان",
+        "VC": "سانت فنسنت والغرينادين",
+        "VE": "فنزويلا",
+        "VG": "جزر فيرجن البريطانية",
+        "VI": "جزر فيرجن الأمريكية",
+        "VN": "فيتنام",
+        "VU": "فانواتو",
+        "WF": "جزر والس وفوتونا",
+        "WS": "ساموا",
+        "XK": "كوسوفو",
+        "YE": "اليمن",
+        "YT": "مايوت",
+        "ZA": "جنوب أفريقيا",
+        "ZM": "زامبيا",
+        "ZW": "زيمبابوي"
+    }
 }
