--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -7,6 +7,17 @@
     "email": "البريد الإلكتروني",
     "Vehicle Plate number": "رقم لوحة المركبة",
     "Vehicle Type": "نوع المركبة",
+    "passport": "جواز السفر",
+    "iqama": "الإقامة",
+    "nationalId": "الهوية الوطنية",
+    "gccId": "هوية مجلس التعاون",
+    "Document Number": "رقم الوثيقة",
+    "Expiry Date": "تاريخ انتهاء {{doc}}",
+    "uploadFile": "تحميل ملف {{doc}}",
+    "browse": "تصفح...",
+    "Only English alphanumeric characters allowed": "يُسمح فقط بالأحرف والأرقام الإنجليزية",
+    "selectTab": "اختر نوع الوثيقة",
+    "Only English alphanumeric and email characters allowed": "مسموح فقط بالحروف الإنجليزية والأرقام والرموز الخاصة بالبريد الإلكتروني",
     "vehicleType": {
         "selectPlaceholder": "اختر نوع المركبة",
         "taxi": "تاكسي",
