--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -10,6 +10,7 @@
     "uploadFile": "Upload {{doc}} file",
     "browse": "Browse...",
     "selectTab": "Select a tab",
+    "DUK1234": "DUK1234",
     "vehicleType": {
         "selectPlaceholder": "Select a vehicle type",
         "taxi": "Taxi",
